tests/baselines/reference/typeArgumentInferenceWithConstraintAsCommonRoot.errors.txt
typeArgumentInferenceWithConstraintAsCommonRoot.ts(4,47): error TS2322: Type 'undefined' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'undefined'.
typeArgumentInferenceWithConstraintAsCommonRoot.ts(7,3): error TS2454: Variable 'g' is used before being assigned.
typeArgumentInferenceWithConstraintAsCommonRoot.ts(7,6): error TS2345: Argument of type 'Elephant' is not assignable to parameter of type 'Giraffe'.
  Property 'y' is missing in type 'Elephant' but required in type 'Giraffe'.
typeArgumentInferenceWithConstraintAsCommonRoot.ts(7,6): error TS2454: Variable 'e' is used before being assigned.


==== typeArgumentInferenceWithConstraintAsCommonRoot.ts (4 errors) ====
    interface Animal { x }
    interface Giraffe extends Animal { y }
    interface Elephant extends Animal { z }
    function f<T extends Animal>(x: T, y: T): T { return undefined; }
                                                  ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'undefined'.
    var g: Giraffe;
    var e: Elephant;
    f(g, e); // valid because both Giraffe and Elephant satisfy the constraint. T is Animal
      ~
!!! error TS2454: Variable 'g' is used before being assigned.
         ~
!!! error TS2345: Argument of type 'Elephant' is not assignable to parameter of type 'Giraffe'.
!!! error TS2345:   Property 'y' is missing in type 'Elephant' but required in type 'Giraffe'.
!!! related TS2728 typeArgumentInferenceWithConstraintAsCommonRoot.ts:2:36: 'y' is declared here.
         ~
!!! error TS2454: Variable 'e' is used before being assigned.